--- a/Home.html
+++ b/Home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 </head>
@@ -12,16 +12,19 @@
   <main>
    
     <div class="upper-division">
-      <h2 id="zuri">Zuri<span>.</span> Team</h2>
+      <h2 id="zuri">Zuri<span>.</span> Team </h2>
       <h1>Learn, Build, Grow.</h1>
       <p id="Unlock">Unlock your Brilliance with our hands-on <span>beginner</span> and <span>expert training</span>. Zuri Team has been immensely successful in creating a global network of a highly adept intelligent workforce that can help your company achieve their mission-critical <span>projects and goals</span> </p>
-      <!-- <div class="buttons"></div> -->
-      <button id="button1"> <a href="New.html"></i>I'm new to the industry</a></button>
-      <button id="button2"> <a href="Experienced.html"></i>I need industry experience</a></button>
+      <div class="buttons">
+      <div id="button1">
+       <a href="New.html">I'm new to the industry</a></div>
+       <div id="button2">
+       <a href="Experienced.html">I need industry experience</a></div>
       </div>
+    </div>
       <div class="lower-half">
       <p id="by">BY ZURI Team</p> <br>
-      <p id="cater">We cater for every level of expertise and needs in the industry.</p>
+      <p id="cater">We cater for every level of <br>expertise and needs in the industry.</p>
       
       <div class="form-container">
     <div class="types">
@@ -48,17 +51,19 @@
     <p class="reds">Blog</p></div>
     <div class="contact">
     <h3>Contact</h2>
-    <p id="jubilee">8 Jubilee-CMD Road, Magodo, Lagos State</p>
+    <p id="jubilee">8 Jubilee-CMD Road, Magodo, <br>Lagos State</p>
     <p class="reds">hello@zuri.team</p></div>
     <div class="follow">
     <h3>Follow Us</h2><a href="#fbook"> <i class="fa fa-facebook-square icon"></i></a>
     <a href="#instagram"><i class="fa fa-instagram icon"></i></a>
-    <a href="#twitter"><i class="fa fa-twitter icon" n></i></a>
-    </div></div>
+    <a href="#twitter"><i class="fa fa-twitter icon"></i></a>
+    <a href="#linkedIn"><i class="fa fa-linkedin-square icon"></i></a>
+  </div></div>
     <hr>
     <p class="end">© 2020 ZURI TEAM</p>
   </div></div>
   </div>
+
 </main>
     </body>
   
