--- a/New.html
+++ b/New.html
@@ -4,22 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>New</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 </head>
 <body>
+    <div class="topnav">
     <img src="https://training.zuri.team/logo.svg" alt="">
-    
-    <H2>INGRESSIVE FOR GOOD + ZURI. TRAINING</H2>
-    <img src="https://training.zuri.team/thumbs.png" alt=""><Button id="Enroll">Enroll now</BUtton>
-    <img src="https://training.zuri.team/lady1.jpg" alt="">
+    <div class="topnav-right">
+    <p id="ab" >About</p>
+    <p>Why Us?</p>
+    <p>Stacks Covered</p>
+    <p>FAQs</p>
+    <img src="https://training.zuri.team/thumbs.png" alt="" width="75" height="75" ><Button id="Enroll">Enroll now</BUtton>
+    </div></div>
+    <div class="upper1" >
+    <img id="lady" src="https://training.zuri.team/lady1.jpg" alt="" width="364" height="338">
     <p>And now your search has endeed...</p>
     <h3>Gain knowledge to help you scale through the tec industry for free.</h3>
     <img src="https://training.zuri.team/line.svg" alt="">
     <p>A basic introduction to software development and product design aimed at complete beginners, which anyone can join</p>
-    <img src="https://training.zuri.team/maleface.svg" alt="">
+    <img src="https://training.zuri.team/maleface.svg" alt=""width="54" height="62">
     <button>Enroll Now</button>
     <img src="https://training.zuri.team/section1wire.svg" alt="">
-    <img src="https://training.zuri.team/male1.jpg" alt="">
+    <img src="https://training.zuri.team/male1.jpg" alt=""width="320" height="391">
+    </div>
     <hr>
     <h2>INGRESSIVE FOR GOOD WAS LAUNCHED IN JULY 2020 WITH NO DOLLAR IN DONATION...</h2>
     <p>Powered by:</p>
@@ -30,7 +39,7 @@
     <img src="https://training.zuri.team/section3wire.svg" alt="">
     <p>Why Zuri Training?</p>
     <h2>Here at Zuri, you gain access to enough knowledge to introduce and aid your success in the tech industry.</h2>
-    <img src="https://training.zuri.team/Star.jpg" alt="">
+    <img src="https://training.zuri.team/Star.jpg" alt=""width="319" height="189">
     <img src="https://training.zuri.team/curve1.png" alt="">
     <img src="https://training.zuri.team/curve1.png" alt="">
     <h3>01 <br> Fully Remote <br> 100% online classes available to anyone in the world.</h3>
@@ -53,8 +62,7 @@
 <p>Practice</p> <p>Fun & Games</p>
 <img src="https://training.zuri.team/dotsection5.svg" alt="">
 <img src="https://training.zuri.team/dotsection5.svg" alt="">
-<img src="https://training.zuri.team/section5-image.png" alt="">
-<p>Scope of Program</p>
+<img src="https://training.zuri.team/section5-image.png" alt="" width="676" height="584">
 <h2>Here is the list of areas that will be explord in the training.</h2>
 <img src="https://training.zuri.team/section6.svg" alt="">
 <h4>Frontend Development</h4>
@@ -101,22 +109,22 @@
 <h1>Program Structure</h1>
 <p>There are 2 broad paths in this program based on your availability.</p>
 <img src="https://training.zuri.team/move.svg" alt="">
-<h3></Full-time</h3>
+<h3>Full-time</h3>
 <p>Requires at least 25 hours weekly on program content.</p>
-<h2>Available Tracks:</h2
+<h2>Available Tracks:</h2>
     <ul>
     <li>Full Stack: Backend (Python, JavaScript), Frontend (HTML, CSS, JavaScript) & DevOps</li>
     <li>Design: Figma, Adobe XD</li>
     </ul><br>
-    <h2>Phases: <br>
+    <h2>Phases:</h2>
     <ul>
     <li>Training Phase</li>
     <li>Project Phase</li>
     </ul><br>
-    <h2>Post Program:</h2><br>
+    <h2>Post Program:</h2>
     <ul>
     <li>Certification of Attendance</li>
-    <li>Zuri Internship imghttps://training.zuri.team/clarity.svg </li> 
+    <li>Zuri Internship <img src="imghttps://training.zuri.team/clarity.svg" alt=""></li>
     <li>Laptop Reward (upgrade or new one) <img src="https://training.zuri.team/clarity.svg" alt=""> </li> 
     <li>Job Placement <img src="https://training.zuri.team/clarity.svg" alt=""> </li>
     <li>Zuri Talent Pool <img src="https://training.zuri.team/clarity.svg" alt=""> </li>
@@ -148,19 +156,19 @@
     <ul>
     <li>Certification of Attendance</li>
     <li>Zuri Internship</li></ul>
-</p>
+    </
 <img src="https://training.zuri.team/time.png" alt="">
     <p>Get Started</p>
-    <a href=""></a>
-    <a href=""></a>
-    <a href=""></a>
-    <a href=""></a>
-    <a href=""></a>
     <h3>Break into the tech industry like a Pro</h3>
     <button>Enroll Now</button>
+    <img src="https://training.zuri.team/logo.svg" alt="">
     <p>© 2022 Zuri Training</p>
+    <a href="#fbook"><i class="fa fa-facebook-square icon"></i></a>
+    <a href="#instagram"><i class="fa fa-instagram icon"></i></a>
+    <a href="#twitter"><i class="fa fa-twitter icon" ></i></a>
+    <a href="#twitter"><i class="fa fa-youtube-play" style="font-size:48px;color:white"></i></a>
     <p>Privacy Policy</p>
     <p>Ingressive For Good</p>
-
+    
 </body>
 </html>
