--- a/Home.html
+++ b/Home.html
@@ -17,9 +17,9 @@
       <p id="Unlock">Unlock your Brilliance with our hands-on <span>beginner</span> and <span>expert training</span>. Zuri Team has been immensely successful in creating a global network of a highly adept intelligent workforce that can help your company achieve their mission-critical <span>projects and goals</span> </p>
       <div class="buttons">
       <div id="button1">
-       <a href="New.html">I'm new to the industry</a></div>
+       <a href="#">I'm new to the industry</a></div>
        <div id="button2">
-       <a href="Experienced.html">I need industry experience</a></div>
+       <a href="#">I need industry experience</a></div>
       </div>
     </div>
       <div class="lower-half">
